feat: Add React-based UI with login page and dashboard
Frontend features:
- React 18 with Bootstrap 5 for responsive UI
- Login page with email/password (dummy authentication)
- Dashboard with expense tracking and analytics
- React Context API for state management
- Fetch API for backend integration
- Maven frontend plugin for automated Node.js/npm installation and build

Backend updates:
- Updated maven-compiler-plugin to 3.12.1 for Java 21 support
- Added maven-surefire-plugin for test reporting
- Added maven-pmd-plugin for code quality checks
- Upgraded maven-shade-plugin to 3.5.0
- Modified EmbeddedServer to serve React static files with SPA routing
- Updated to virtual threads executor for Java 21

Build process now:
- Automatically installs Node.js v20.10.0 and npm 10.2.3
- Builds React frontend during Maven compile phase
- Bundles frontend into JAR alongside Java backend